frontend/public/css/main.css
.footer {
  text-align: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 20px;
  padding-bottom: 5px;
  background-color: #475c7a;
  color: #dfe6e9;
}

header,
#content,
footer {
  padding-left: 350px;
}

@media only screen and (max-width: 992px) {
  header,
  #content,
  footer {
    padding-left: 0;
  }
}

.nav-header {
  padding-left: 32px;
  padding-right: 32px;
  color: #2d3436;
  display: flex;
  align-items: center;
  justify-content: center;
}

.content {
  color: #475c7a;
}

.content-body {
  padding-top: 100px;
  padding-left: 100px;
  padding-right: 100px;
  color: #475c7a;
}

.sidenav {
  background-color: #fcbb6d;
  color: #2d3436;
}

.nav-header-hr {
  margin-left: 32px;
  margin-right: 32px;
  border: 1px solid #475c7a;
}

.nav-home-link {
  color: #475c7a;
}

#view-schedule-modal.modal {
  width: 98%;
  height: 88%;
  max-height: 88%;
}

#add-employee-modal.modal {
  width: 40%;
  max-height: 80%;
  height: 80%;
}

.nav-icon {
  color: #475c7a;
  width: 50px;
  height: 40px;
}

.heading {
  padding-left: 80px;
  border-bottom: 1px solid #fcbb6d;
}

#calendar {
  margin-left: 80px;
}

.modal.modal-fixed-header .modal-header {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  position: sticky;
  top: 0;
  background: inherit;
  z-index: 1003;
}

#view-schedule-modal.modal .modal-content {
  padding-left: 0;
}

#view-schedule-modal.modal .modal-content {
  padding-left: 0;
}

#schedule-title {
  margin-left: 30px;
  margin-top: 30px;
}

.collection-item {
  cursor: pointer;
}

.colgroup {
  display: inline-block;
  overflow: hidden;
  margin-right: 10px;
  vertical-align: top;
}

.collection-item:hover {
  background-color: #ffd8a8;
}

.colgroup .row {
  vertical-align: middle;
  text-align: center;
  width: 250px;
  max-width: 250px;
  min-width: 250px;
  height: 100px;
  max-height: 100px;
  min-height: 100px;
}

.colgroup .row > * {
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-top: 1px;
  margin-bottom: 1px;
}

.text-primary {
  color: #475c7a;
}

.text-secondary {
  color: #685d79;
}

.text-tertiary {
  color: #ab6c82;
}

.main-action-button {
  margin-right: 100px;
  background-color: #d8737f;
}

.main-action-button:hover {
  background-color: #685d79;
}

.colors {
  background-color: #ffd8a8 #fcbb6d #d8737f #ab6c82 #685d79 #475c7a #dfe6e9
    #2d3436;
}

